--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Proyecto)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Proyecto main.cpp Articulo.h Articulo.cpp)
+add_executable(Proyecto main.cpp Articulo.h Articulo.cpp HashMap.h HashEntry.h)
